[tool.poetry]
authors = [
    "Max Bernstein <python@bernsteinbear.com>",
    "Chris Gregory <christopher.b.gregory@gmail.com>",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "Scrapscript interpreter"
keywords = ["scrapscript", "interpreter"]
license = "Apache Software License"
name = "scrapscript"
readme = "README.md"
repository = "https://github.com/tekknolagi/scrapscript"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
pylint = "^3.0.1"
pytest = "^7.4.0"
ruff = "^0.1.5"

[tool.poetry.scripts]
scrap = "scrapscript.cli.cli:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.basic]
good-names = ["i", "x"]
notes = ["FIXME"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
]

[tool.pylint.reports]
output-format = "colorized"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E741"]
